Fix: tweak padding, bit theme font is cut off

--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ body, html {
 }
 
   .settings-panel .inner-wrapper {
-    padding: 35px 0 10px;
+    padding: 35px 5px 10px;
     justify-self: center;
   }
 
